--- a/src/components/BorderedButton/BorderedButton.module.css
+++ b/src/components/BorderedButton/BorderedButton.module.css
@@ -15,8 +15,8 @@
   content: "";
   position: absolute;
   top: 6px;
-  left: -2px;
-  width: calc(100% + 4px);
+  left: -3px;
+  width: calc(100% + 6px);
   height: calc(100% - 12px);
   background: #fff;
   transition: 0.5s ease-in-out;
@@ -40,7 +40,12 @@
 .buttonContainer:hover::after {
   transform: scaleX(0);
 }
-span {
+.buttonContainer span {
   position: relative;
   z-index: 3;
+}
+.buttonContainer span a {
+  color: #111;
+  text-decoration: none;
+  font-family: "Roboto", serif;
 }
