--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -26,13 +26,10 @@
   height: 50%;
   padding: 30px;
   overflow: hidden;
-  /* background-color: #000; */
   color: #000;
-  /* font-size: 60px; */
 }
 .nav .navHeader.active::before {
   left: 2px;
-  /* text-shadow: -2px 0 rgb(253, 80, 80); */
   animation-timing-function: linear;
   animation-duration: 2s;
   animation-name: glitch1;
@@ -44,7 +41,6 @@
 }
 .nav .navHeader.active::after {
   left: -2px;
-  /* text-shadow: -2px 0 rgb(33, 33, 248); */
   animation-timing-function: linear;
   animation-duration: 2.5s;
   animation-name: glitch2;
@@ -85,12 +81,16 @@
   font-size: 24px;
   text-align: center;
   margin-bottom: 20px;
-  color: #fff;
+
   font-weight: 300;
   letter-spacing: 2px;
   cursor: pointer;
 }
-.menuList li:hover {
+.menuList a {
+  color: #fff;
+  text-decoration: none;
+}
+.menuList a:hover {
   color: #909090;
 }
 .closeButton {
