--- a/src/components/Logos/Logos.module.css
+++ b/src/components/Logos/Logos.module.css
@@ -1,6 +1,4 @@
-.works {
-}
-.works .container {
+.logos .container {
   width: 1140px;
   margin: 0 auto;
   padding: 0 55px;
@@ -8,6 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 100px;
 }
 .jumboContainer {
   width: 100%;
@@ -27,43 +26,22 @@
   font-size: 20px;
   font-weight: 400;
 }
-.worksContainer {
-  width: 100%;
+.logosItemsContainer {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   margin-bottom: 100px;
 }
-.worksContainer a {
-  width: 45%;
-}
-.itemContainer {
-  width: 100%;
+.logoItem {
+  width: 32%;
   display: flex;
-  flex-direction: column;
-  margin-bottom: 100px;
-}
-.imgContainer {
-  width: 100%;
-  display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
 }
-.imgContainer img {
+.logoItem img {
   max-width: 100%;
   height: auto;
   border: 1px solid #e9e9e9;
-}
-.titleHeading {
-  font-family: "Roboto", serif;
-  font-size: 23px;
-  font-weight: 700;
-  color: black;
-}
-.roleParagraph {
-  font-family: "Roboto", serif;
-  font-size: 18px;
-  font-weight: 400;
-  color: black;
 }
