--- a/src/components/TGModal/TGModal.module.css
+++ b/src/components/TGModal/TGModal.module.css
@@ -30,12 +30,16 @@
   display: flex;
   align-items: center;
 }
-.modal_container .info_container i {
+.modal_container .info_container .icon {
   font-size: 35px;
   color: #333;
 }
+.modal_container .info_container a,
 .modal_container .info_container p {
   font-size: 25px;
   margin: 0 15px;
-  color: #000;
+  color: #333;
+}
+.modal_container .info_container:hover p {
+  color: black;
 }
