--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -13,9 +13,8 @@
 .descriptionItem {
   margin: 20px;
   flex: 1;
-  /* text-align: center; */
 }
-.descriptionImage {
+.descriptionItem .descriptionImage {
   width: 550px;
   height: 385px;
   border-radius: 5px;
@@ -26,4 +25,23 @@
 .descriptionItem ul {
   list-style: none;
   padding: 0;
+}
+@media (max-width: 1200px) {
+  .descriptionWrapper {
+    width: 95%;
+  }
+  .descriptionItem .descriptionImage {
+    max-width: 100%;
+    height: auto;
+  }
+}
+@media (max-width: 768px) {
+  .descriptionRow {
+    flex-direction: column;
+    align-items: center;
+  }
+  .descriptionItem {
+    width: 90%;
+    margin-bottom: 30px;
+  }
 }
