--- a/src/components/Jumbotron/Jumbotron.module.css
+++ b/src/components/Jumbotron/Jumbotron.module.css
@@ -25,3 +25,14 @@
   margin-top: 0;
   font-size: 20px;
 }
+@media (max-width: 1200px) {
+  .jumboContainer {
+    width: 95%;
+  }
+  .jumboHeader {
+    text-align: center;
+  }
+  .jumboHeader::after {
+    display: none;
+  }
+}
