--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -128,6 +128,50 @@ a {
   background-color: #909090;
 }
 
+@media (max-width: 1200px) {
+  .nav {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .navMenuHeader {
+    padding-right: 0;
+    padding-left: 0;
+  }
+}
+@media (max-width: 768px) {
+  .nav {
+    width: 95%;
+    margin: 0 auto;
+  }
+  .nav .navHeader,
+  .navMenuHeader {
+    font-size: 25px;
+  }
+}
+@media (max-width: 414px) {
+  h2.navHeader {
+    font-size: 20px;
+  }
+  .nav .navHeader,
+  .navMenuHeader {
+    font-size: 20px;
+    text-align: center;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .nav .navHeader::before {
+    display: none;
+  }
+  .nav .navHeader::after {
+    display: none;
+  }
+  .nav .navHeader.active:hover::after {
+    animation-play-state: paused;
+  }
+  .nav .navHeader.active:hover::before {
+    animation-play-state: paused;
+  }
+}
 @keyframes glitch1 {
   0% {
     clip: rect(49px, 600px, 51px, 30px);
