--- a/src/components/SingleProject/SingleProject.module.css
+++ b/src/components/SingleProject/SingleProject.module.css
@@ -36,6 +36,7 @@
 .projectDescriptionImgContainer img {
   max-width: 100%;
   height: auto;
+  border: 1px solid #e9e9e9;
 }
 .projectHeading {
   font-family: "Roboto", serif;
@@ -72,4 +73,37 @@
 }
 .buttonContainer {
   margin-top: 70px;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    width: 95%;
+  }
+}
+@media (max-width: 768px) {
+  .projectDescriptionContainer {
+    flex-direction: column;
+    align-items: center;
+  }
+  .projectDescription {
+    margin: 0;
+  }
+  .projectDescriptionItem {
+    width: 80%;
+    margin-bottom: 50px;
+  }
+  .projectImagesRow {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .projectImagesRow .rowImageContainer {
+    width: 80%;
+    margin-bottom: 40px;
+  }
+}
+@media (max-width: 414px) {
+  .jumboImgContainer {
+    margin-bottom: 30px;
+  }
 }
