--- a/src/components/Works/Works.module.css
+++ b/src/components/Works/Works.module.css
@@ -1,4 +1,5 @@
 .works {
+  width: 100%;
 }
 .works .container {
   width: 1140px;
@@ -66,4 +67,21 @@
   font-size: 18px;
   font-weight: 400;
   color: black;
+}
+@media (max-width: 1200px) {
+  .works .container {
+    width: 95%;
+    padding: 0;
+  }
+}
+@media (max-width: 768px) {
+  .worksContainer {
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .worksContainer a {
+    width: 80%;
+  }
 }
