--- a/src/components/Works/Works.module.css
+++ b/src/components/Works/Works.module.css
@@ -18,13 +18,13 @@
   margin: 100px 0;
 }
 .jumboHeading {
-  font-family: "Roboto", serif;
+  font-family: 'Roboto', serif;
   font-size: 34px;
   font-weight: 700;
   margin: 0;
 }
 .jumboParagraph {
-  font-family: "Roboto", serif;
+  font-family: 'Roboto', serif;
   font-size: 20px;
   font-weight: 400;
 }
@@ -38,6 +38,7 @@
 }
 .worksContainer a {
   width: 45%;
+  max-height: 570px;
 }
 .itemContainer {
   width: 100%;
@@ -57,13 +58,13 @@
   border: 1px solid #e9e9e9;
 }
 .titleHeading {
-  font-family: "Roboto", serif;
+  font-family: 'Roboto', serif;
   font-size: 23px;
   font-weight: 700;
   color: black;
 }
 .roleParagraph {
-  font-family: "Roboto", serif;
+  font-family: 'Roboto', serif;
   font-size: 18px;
   font-weight: 400;
   color: black;
